@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-22T16:06:32Z",
+  "timestamp" : "2022-06-23T08:07:28Z",
   "count_outdated" : 1576,
   "uniques_outdated" : 433,
   "count" : 1629,
-  "uniques" : 459,
+  "uniques" : 460,
   "clones" : [
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -91,6 +91,13 @@
     },
     {
       "timestamp": "2022-06-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
